@@ -19,6 +19,9 @@ apt (0.9.7.6) UNRELEASED; urgency=low
       APT::Cache::ShowVersion is true (default: false) as discussed in
       #218995 to help debian-cd fixing #687949. Thanks to Sam Lidder
       for initial patch and Steve McIntyre for nagging and testing!
+  * apt-pkg/edsp.cc:
+    - include reinstall requests and already installed (= protected) packages
+      in the install-request for external resolvers (Closes: #689331)
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 19 Sep 2012 11:29:56 +0200
 
